svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: abe-assignment-service
spec:
  type: ClusterIP
  selector:
    app: abe-assignment-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
